@@ -23,7 +23,6 @@ import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.util.Vector;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static fr.openmc.core.features.city.sub.mascots.MascotsManager.DEAD_MASCOT_NAME;
 
@@ -66,9 +65,9 @@ public class MascotsDeathListener implements Listener {
             spawnFireworkExplosion(entity.getLocation());
 
             List<Player> nearbyEnemies = entity.getNearbyEntities(5, 5, 5).stream()
-                    .filter(ent -> ent instanceof Player)
-                    .map(ent -> (Player) ent)
-                    .collect(Collectors.toList());
+                    .filter(Player.class::isInstance)
+                    .map(Player.class::cast)
+                    .toList();
 
             for (Player player : nearbyEnemies) {
                 Vector direction = player.getLocation().toVector().subtract(entity.getLocation().toVector()).normalize();
